# cpp-gstreamer-video-player

./: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  Future-scope.txt  PLAYER_CAPABILITIES.txt  README.md  main.cpp
